--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -74,7 +74,15 @@
                 <input type="checkbox" class="arabic">
                 <p class="arabic">Arabic</p>
                 <input type="checkbox" class="spanish">
-                <p></p>
+                <p class="spanish">Spanish</p>
+                <input type="checkbox" class="english">
+                <p class="english">English</p>
+                <input type="checkbox" class="french">
+                <p class="french">French</p>
+                <input type="checkbox" class="rusion">
+                <p class="rusion">Rusion</p>
+                <input type="checkbox" class="hebrew">
+                <p class="hebrew">Hebrew</p>
 
             
             
