--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,662 +1,46 @@
-button.b1
+.header-img
 {
-    margin-right: 20px;
-    font-size: 19px;
-line-height: 23px;
-color: #ffffff;
-background-color: #e65d13;
-font-weight: 600;
-font-family: "Poppins";
-text-align: center;
+    height: 40vh;
+    width: 100vw;
+    background-image: url('../../../assets/images/2.jpg');
+    margin-bottom: 100vh;
 }
-button.b2
-{
-    margin-right: 20px;
-    font-size: 19px;
-line-height: 23px;
-color: #712b06;
-font-weight: 600;
-font-family: "Poppins";
-text-align: center;
-}
-button.b3
-{
-    margin-right: 20px;
-    font-size: 19px;
-line-height: 23px;
-color: #712b06;
-font-weight: 600;
-font-family: "Poppins";
-text-align: center;
-}
-button.b4
-{
-    margin-right: 20px;
-    font-size: 19px;
-line-height: 23px;
-color: #712b06;
-font-weight: 600;
-font-family: "Poppins";
-text-align: center;
-}
-nav.nav1
-{
-     width: 1759px;
-     height: 101px;
-     background-color: #e65d13;
-}
-p.we1
-{
-    font-size: 28px;
-line-height: 23px;
-color: #ffffff;
-font-weight: 700;
-font-family: "Poppins";
-text-align: left;
-
-}
-div.div1
-{
-    width: 1759px;
-height: 3800px;
-background-color: #5b2ea2;
-}
-div.bord
-{
-    width: 1000px;
-height: 1000px;
-margin-top: -700px;
-margin-left: 1000px;
-border-radius: 600px;
-background-color: #3d1b73;
-}
-div.div2
-{
-    width: 1759px;
-height: 509px;
-background-color: #1b0045;
-}
-div.div3
-{
-    width: 1470px;
-height: 20px;
-margin-top: -40px;
-margin-left: 143px;
-border-radius: 10px;
-background-color: #e65d13;
-}
-div.div4
-{
-    width: 1469px;
-height: 1290px;
-border-radius: 10px;
-filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
-background-color: #ffffff;
-}
-div.div5
-{
-    width: 1469px;
-    height: 1200px;
-    margin-top: 1340px;
-    margin-left: 143px;
+.section{
     border-radius: 10px;
-    filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
-    background-color: #ffffff;
+    padding: 90px;
+    margin:80px 180px;
+    background-color: white;
+    border-top: 5px solid #e65d13;
 }
-div.div6
-{
-    width: 1469px;
-    height: 500px;
-    margin-top: 80px;
-    margin-left: 143px;
-    border-radius: 10px;
-    filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
-    background-color: #ffffff;
+.first-section{
+    border-top: 5px solid white!important;
+    position: absolute;
+    top: 25vh;
+    width: -webkit-fill-available;
 }
-p.info
-{
-    font-size: 20px;
-line-height: 23px;
-margin-left: 40px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
-}
-div.vinfo
-{
-    width: 1469px;
-height: 1px;
-background-color: #f2f2f2;
-}
-p.info1
-{
-    font-size: 40px;
-    line-height: 23px;
-    color: #161316;
-    font-weight: 600;
-    font-family: "Poppins";
+.title{
     text-align: center;
 }
-div.titel
-{
-    width: 1469px;
-height: 1px;
-background-color: #f2f2f2;
+.form-control{
+    margin: 14px 0;
+    height: 55px;
 }
-p.personal_info
-{
-    font-size: 20px;
-line-height: 23px;
-margin-left: 40px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
+.second-col{
+    padding-top: 19px;
 }
-input.first_name
-{
-    width: 584px;
-height: 45px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.phon_number
-{
-    width: 584px;
-height: 45px;
-margin-top: 0px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.last_name
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.id_number
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.email_address
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.mobail_number
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.date
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-select
-{
-    width: 590px;
-height: 45px;
-margin-top: 40px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-div.titel1
-{
-    margin-left: 90px;
-
-}
-p.email_address
-{
-    font-size: 20px;
-    line-height: 23px;
-    margin-left: 40px;
-    color: #898989;
-    font-weight: 500;
-    font-family: "Poppins";
-}
-p.address
-{
-    font-size: 20px;
-    margin-top: 50px;
-    margin-left: -1135px;
-line-height: 23px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
-text-align: center;
-}
-input.apartment
-{
-    width: 584px;
-height: 45px;
-margin-top: 5px;
-margin-left: 130px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.street
-{
-    width: 584px;
-height: 45px;
-margin-top: 6px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.floor
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 131px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.house
-{
-    width: 584px;
-height: 45px;
-margin-top: 6px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.city
-{
-    width: 584px;
-height: 45px;
-margin-top: 40px;
-margin-left: 131px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.postal
-{
-    width: 584px;
-height: 45px;
-margin-top: 6px;
-margin-left: 40px;
-border-radius: 3px;
-background-color: #ffffff;
-border: 1px solid #cbcbcb;
-font-size: 14px;
-line-height: 23px;
-color: #b4b4b4;
-font-weight: 300;
-font-family: "Poppins";
-}
-p.celphone_type
-{
-    font-size: 20px;
-    margin-top: 50px;
-    margin-left: -1075px;
-line-height: 23px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
-text-align: center;
-}
-input.radio_sms
-{
-    width: 146px;
-    height: 14px;
-    margin-top: -100px;
-    margin-left: 260px;
-    border-radius: 10px;
-    filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
-    background-color: #ffffff;
-    width: 18px;
-    height: 18px;
-    border-radius: 9px;
-    background-color: #621dce;
-    border: 1px solid #621dce;
-}
-p.sms
-{
-    font-size: 16px;
-    margin-top: -24px;
-    margin-left: 280px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.radio_whatapp
-{
- width: 146px;
- height: 14px;
- margin-top: -100px;
- margin-left: 260px;
- border-radius: 10px;
- filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
- background-color: #ffffff;
- width: 18px;
- height: 18px;
- border-radius: 9px;
- background-color: #621dce;
- border: 1px solid #621dce;
-}
-input.radio_kosher
-{
- width: 146px;
- height: 14px;
- margin-top: -100px;
- margin-left: 260px;
- border-radius: 10px;
- filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
- background-color: #ffffff;
- width: 18px;
- height: 18px;
- border-radius: 9px;
- background-color: #621dce;
- border: 1px solid #621dce;
-}
-p.whatapp
-{
-    font-size: 16px;
-    margin-top: -24px;
-    margin-left: 280px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";
-}
-p.kosher
-{
-    font-size: 16px;
-    margin-top: -24px;
-    margin-left: 280px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";
-}
-p.shabat
-{
-    font-size: 20px;
-    margin-top: 50px;
-    margin-left: -1085px;
-line-height: 23px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
-text-align: center;
-}
-input.radio_yes
-{
- width: 146px;
- height: 14px;
- margin-top: -100px;
- margin-left: 260px;
- border-radius: 10px;
- filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
- background-color: #ffffff;
- width: 18px;
- height: 18px;
- border-radius: 9px;
- background-color: #621dce;
- border: 1px solid #621dce;
-}
-p.yes
-{
-    font-size: 16px;
-    margin-top: -24px;
-    margin-left: 280px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";
-}
-p.no
-{
-    font-size: 16px;
-    margin-top: -24px;
-    margin-left: 280px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";
-}
-input.radio_no
-{
- width: 146px;
- height: 14px;
- margin-top: -100px;
- margin-left: 260px;
- border-radius: 10px;
- filter: drop-shadow(0px 6px 15px rgba(0,37,98,0.15));
- background-color: #ffffff;
- width: 18px;
- height: 18px;
- border-radius: 9px;
- background-color: #621dce;
- border: 1px solid #621dce;
-}
-p.languages
-{
-    font-size: 20px;
-    margin-top: -290px;
-    margin-left: -40px;
-line-height: 23px;
-color: #898989;
-font-weight: 500;
-font-family: "Poppins";
-text-align: center;
-}
-input.arabic
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.arabic
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
-}
-input.spanish
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.spanish
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
-}
-input.english
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.english
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
-}
-input.french
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.french
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
-}
-input.rusion
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.rusion
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
-}
-input.hebrew
-{
-    width: 20px;
-height: 20px;
-margin-top: -250px;
-margin-left: 765px;
-border-radius: 3px;
-background-color: #621dce;
-}
-p.hebrew
-{
-    font-size: 16px;
-margin-left: 800px;
-margin-top: -25px;
-line-height: 23px;
-color: #8a8a8a;
-font-weight: 300;
-font-family: "Poppins";;
+.prograph{
+    padding-top: 30px;
 }
 
-
+.custom-control-input:checked~.custom-control-label::before {
+    color: #fff;
+    border-color: #7B1FA2;
+  }
+  
+  .custom-control-input:checked~.custom-control-label.red::before {
+    background-color: red;
+  }
+  
+  .custom-control-input:checked~.custom-control-label.green::before {
+    background-color: green;
+  }
