--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,7 +1,16 @@
-<h1></h1>
+<div class="wapper">
+    <div class="maim-menu row">
+        <div class="col-10">
+            <a routerLink="/assisted">בקשת עזרה</a>
+            <a routerLink="/volunteer">מתנדבים</a>
+            <a routerLink="/volunteering-domain">תחומי התנדבות</a>
+        </div>
+        <div class="col-2">Logo</div>
+    </div>
 
-
-<!-- <a [routerLink]="login"></a> -->
-<router-outlet></router-outlet>
-
-<h1></h1>
+    <!-- <a [routerLink]="login"></a> -->
+    <div class="main-container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+    
