--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,74 +1,1 @@
-<div class="header-img"></div>
-
-<div class="section first-section">
-    <h2 class="title">מידע אישי למתנדב</h2>
-    <div class="row prograph">
-        <div class="col-6">
-            <h6>מידע אישי</h6>
-            <input class="form-control" placeholder="שם פרטי"/>
-            <input class="form-control" placeholder="מספר זהות"/>
-            <input class="form-control" placeholder="כתובת אימייל"/>
-            <input class="form-control" placeholder="מספר טלפון"/>
-
-        </div>
-        
-        <div class="col-6 second-col">
-            <input class="form-control" placeholder="שם משפחה"/>
-            <input type="date" class="form-control" placeholder="תאריך לידה"/>
-            <input class="form-control" placeholder="טלפון נוסף"/>
-
-            <select class="form-select form-control" aria-label="Default select example">
-                <option selected>בחר מין</option>
-                <option value="2">זכר</option>
-                <option value="3">נקבה</option>
-              </select>
-        </div>
-    </div>
-
-    <div class="row prograph">
-        <div class="col-6">
-            <h6>כתובת</h6>
-            <input class="form-control" placeholder="מספר דירה"/>
-            <input class="form-control" placeholder="רחוב"/>
-            <input class="form-control" placeholder="קומה"/>
-
-        </div>
-        <div class="col-6 second-col">
-            <input class="form-control" placeholder="מספר בית"/>
-            <input class="form-control" placeholder="עיר"/>
-            <input class="form-control" placeholder="מיקוד"/>
-        </div>
-    </div>
-    <div class="row prograph">
-
-        <div class="col">
-
-            <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="rd_1" name="rd" class="custom-control-input" value="Yes">
-                <label class="custom-control-label green" for="rd_1">Yes</label>
-              </div>
-              <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="rd_2" name="rd" class="custom-control-input" value="No">
-                <label class="custom-control-label red" for="rd_2">No</label>
-            </div>
-
-            <label>סוג טלפון</label>
-            <label>SMS</label>
-            <input type="radio" name="phone-type"/>
-            <label>WhatApp</label>
-            <input type="radio" name="phone-type"/>
-            <label>כשר</label>
-            <input type="radio" name="phone-type"/>
-        </div>
-
-    </div>
-    
-</div>
-
-<div class="section">
-
-</div>
-
-<div class="section">
-
-</div>
+<p>login works!</p>
