--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -43,7 +43,7 @@
 
         <div class="col">
 
-            <h6 class="inline-title">סוג טלפון</h6>
+            <h6 class="inline-title">סוג טלפון:</h6>
 
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
@@ -63,7 +63,7 @@
     <div class="row prograph">
         <div class="col">
 
-            <h6 class="inline-title"> שומר שבת</h6>
+            <h6 class="inline-title"> שומר שבת:</h6>
 
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="shabat1" name="shabat" class="custom-control-input" value="yes">
@@ -83,27 +83,39 @@
             <h6 class="inline-title"> שפות:</h6>
 
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" value="yes">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="no">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <label class="custom-control-label purple" for="lang3">רוסית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <label class="custom-control-label purple" for="lang4">ספרדית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
             <!-- {{lang2.checked}}
             <label *ngIf="lang2.checked==true"> aaa</label> -->
 
         </div>
     </div>
-    <hr/>
+   
     <div class="button-wapper">
         <button type="button" class="btn btn-dark btn-perple btn-lg"> רישום</button>
     </div>
     
 </div>
 
-<div class="section">
-
+<div class="section ">
+    
 </div>
 
 <div class="section">
