--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,7 +1,7 @@
 <div class="wapper">
     <div class="maim-menu row">
         <div class="col-10">
-            <a routerLink="/assisted">בקשת עזרה</a>
+            <a routerLink="/assisted">נעזרים</a>
             <a routerLink="/volunteer">מתנדבים</a>
             <a routerLink="/volunteering-domain">תחומי התנדבות</a>
         </div>
