--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -1,2 +1,129 @@
+<div class="header-img"></div>
 
+<div class="section first-section">
+    <h2 class="title">מידע אישי לנעזר</h2>
+    <div class="row prograph">
+        <div class="col-6">
+            <h6>מידע אישי</h6>
+            <input class="form-control" placeholder="שם פרטי"/>
+            <input class="form-control" placeholder="גיל "/>
+            <input class="form-control" placeholder="כתובת אימייל"/>
+            <input class="form-control" placeholder="טלפון נוסף "/>
 
+        </div>
+        
+        <div class="col-6 second-col">
+            <input class="form-control" placeholder="שם משפחה"/>
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>מצב אישי</option>
+                <option value="2">נשוי/אה</option>
+                <option value="3">גרוש/ה</option>
+                <option value="4">רווק/ה</option>
+                <option value="5">אלמן/ה</option>
+              </select>
+            <input class="form-control" placeholder="מספר טלפון "/>
+
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>בחר מין</option>
+                <option value="2">זכר</option>
+                <option value="3">נקבה</option>
+              </select>
+        </div>
+    </div>
+
+    <div class="row prograph">
+        <div class="col-6">
+            <h6>כתובת</h6>
+            <input class="form-control" placeholder="מספר דירה"/>
+            <input class="form-control" placeholder="רחוב"/>
+            <input class="form-control" placeholder="קומה"/>
+
+        </div>
+        <div class="col-6 second-col">
+            <input class="form-control" placeholder="מספר בית"/>
+            <input class="form-control" placeholder="עיר"/>
+            <input class="form-control" placeholder="מיקוד"/>
+        </div>
+    </div>
+    <div class="row prograph">
+
+        <div class="col">
+
+            <h6 class="inline-title">סוג טלפון:</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
+                <label class="custom-control-label purple" for="phone1">SMS</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="phone2" name="phone" class="custom-control-input" value="WhatApp">
+                <label class="custom-control-label purple" for="phone2">WhatApp</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="phone3" name="phone" class="custom-control-input" value="kosher">
+                <label class="custom-control-label purple" for="phone3">כשר</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row prograph">
+        <div class="col">
+
+            <h6 class="inline-title"> שומר שבת:</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="shabat1" name="shabat" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="shabat1">כן</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="shabat2" name="shabat" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="shabat2">לא</label>
+            </div>
+        
+        </div>
+    </div> -->
+
+    <div class="row prograph">
+        <div class="col">
+
+            <h6 class="inline-title"> שפות:</h6>
+
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <label class="custom-control-label purple" for="lang1">עברית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <label class="custom-control-label purple" for="lang2">אנגלית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <label class="custom-control-label purple" for="lang3">רוסית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <label class="custom-control-label purple" for="lang4">ספרדית</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <label class="custom-control-label purple" for="lang5">ערבית</label>
+            </div>
+            <!-- {{lang2.checked}}
+            <label *ngIf="lang2.checked==true"> aaa</label> -->
+
+        </div>
+    </div>
+   
+    <div class="button-wapper">
+        <button type="button" class="btn btn-dark btn-perple btn-lg"> רישום</button>
+    </div>
+    
+</div>
+
+<div class="section">
+    <h2 class="name"> שירות צבאי</h2>
+</div>
+
+<div class="section">
+
+</div>
