--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -6,14 +6,30 @@
         <div class="col-6">
             <h6>מידע אישי</h6>
             <input class="form-control" placeholder="שם פרטי"/>
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>טייטל</option>
+                <option value="2">רב</option>
+                <option value="3">דוקטור</option>
+                <option value="4">פרופסור</option>
+                <option value="5">עורך דין</option>
+                <option value="6">רואה חשבון</option>
+            </select>
             <input class="form-control" placeholder="מספר זהות"/>
             <input class="form-control" placeholder="כתובת אימייל"/>
             <input class="form-control" placeholder="מספר טלפון"/>
+
 
         </div>
         
         <div class="col-6 second-col">
             <input class="form-control" placeholder="שם משפחה"/>
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>מצב אישי</option>
+                <option value="2">נשוי/אה</option>
+                <option value="3">גרוש/ה</option>
+                <option value="4">רווק/ה</option>
+                <option value="5">אלמן/ה</option>
+              </select>
             <input type="date" class="form-control" placeholder="תאריך לידה"/>
             <input class="form-control" placeholder="טלפון נוסף"/>
 
@@ -114,7 +130,7 @@
     
 </div>
 
-<div class="section ">
+<div class="section second-section ">
     
 </div>
 
