--- a/src/app/components/assisted/assisted.component.css
+++ b/src/app/components/assisted/assisted.component.css
@@ -1,1 +1,55 @@
+.header-img
+{
+    height: 40vh;
+    width: 100vw;
+    background-image: url('../../../assets/images/2.jpg');
+    margin-bottom: 100vh;
+}
+.section{
+    border-radius: 10px;
+    padding: 90px;
+    margin:80px 180px;
+    background-color: white;
+    border-top: 5px solid #e65d13;
+}
+.first-section{
+    border-top: 5px solid white!important;
+    position: absolute;
+    top: 25vh;
+    width: -webkit-fill-available;
+}
+.title{
+    text-align: center;
+}
+.form-control{
+    margin: 14px 0;
+    height: 55px;
+}
+.second-col{
+    padding-top: 19px;
+}
+.prograph{
+    padding-top: 30px;
+}
 
+.custom-control-input:checked~.custom-control-label::before {
+    color: #fff;
+    border-color: #7B1FA2;
+  }
+  
+  .custom-control-input:checked~.custom-control-label.purple::before {
+    background-color: #7B1FA2;
+  }
+.inline-title{
+    display: inline-block;
+}
+.btn-perple{
+    background-color: #7B1FA2!important;
+
+}
+.button-wapper{
+    text-align: left;
+}
+.name{
+    text-align: center;
+}
