--- a/src/app/components/volunteering-domain/volunteering-domain.component.css
+++ b/src/app/components/volunteering-domain/volunteering-domain.component.css
@@ -2,7 +2,7 @@
 {
     height: 40vh;
     width: 100vw;
-    background-image: url('../../../assets/images/2.jpg');
+    background-image: url('../../../assets/images/4.png');
     margin-bottom: 100vh;
 }
 .section{
