--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -115,7 +115,7 @@
     </div>
    
     <div class="button-wapper">
-        <button type="button" class="btn btn-dark btn-perple btn-lg"> רישום</button>
+        <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "add()"> רישום</button>
     </div>
     
 </div>
