--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -100,22 +100,37 @@
 
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
                 <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
             <div class="custom-control custom-checkbox">
                 <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
                 <label class="custom-control-label purple" for="lang3">רוסית</label>
             </div>
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
             <!-- {{lang2.checked}}
@@ -130,8 +145,8 @@
     
 </div>
 
-<div class="section second-section ">
-    
+<div class="section">
+    <h2 class="title"> שירות צבאי</h2>
 </div>
 
 <div class="section">
