--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -147,8 +147,24 @@
 
 <div class="section">
     <h2 class="title"> שירות צבאי</h2>
+    <div class="row prograph">
+        <div class="col">
+
+            <h6 class="inline-title"> שומר שבת:</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="shabat1" name="shabat" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="shabat1">כן</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="shabat2" name="shabat" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="shabat2">לא</label>
+            </div>
+        
+        </div>
+    </div>
 </div>
 
 <div class="section">
-
+    <h2 class="title"> שירות צבאי</h2>
 </div>
