--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -24,19 +24,21 @@
         <div class="col-6 second-col">
             <input class="form-control" placeholder="שם משפחה"/>
             <select class="form-select form-control" aria-label="Default select example">
-                <option selected>מצב אישי</option>
+                <!-- <option selected>מצב אישי</option>
                 <option value="2">נשוי/אה</option>
                 <option value="3">גרוש/ה</option>
                 <option value="4">רווק/ה</option>
-                <option value="5">אלמן/ה</option>
+                <option value="5">אלמן/ה</option> -->
+                <option *ngFor="let item of list">{{item.description}}</option>
               </select>
             <input type="date" class="form-control" placeholder="תאריך לידה"/>
             <input class="form-control" placeholder="טלפון נוסף"/>
 
             <select class="form-select form-control" aria-label="Default select example">
-                <option selected>בחר מין</option>
+                <!-- <option selected>בחר מין</option>
                 <option value="2">זכר</option>
-                <option value="3">נקבה</option>
+                <option value="3">נקבה</option> -->
+                <option *ngFor="let item of list1">{{item.description}}</option>
               </select>
         </div>
     </div>
