--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -33,7 +33,7 @@
             <input type="date" class="form-control" placeholder="תאריך לידה"/>
             <input class="form-control" placeholder="טלפון נוסף"/>
 
-            <select class="form-select form-control" aria-label="Default select example">
+            <select class="form-select formtrol" aria-label="Default select example">
                 <option selected>בחר מין</option>
                 <option value="2">זכר</option>
                 <option value="3">נקבה</option>
@@ -98,73 +98,127 @@
 
             <h6 class="inline-title"> שפות:</h6>
 
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
-                <label class="custom-control-label purple" for="lang1">עברית</label>
-                <button  type="button" class="custom1" >קריאה</button>
-                <button  type="button" class="custom1" >כתיבה</button>
-                <button  type="button" class="custom1" >שפת אם</button>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" checked value="english">
-                <label class="custom-control-label purple" for="lang2">אנגלית</label>
-                <button  type="button" class="custom1" >קריאה</button>
-                <button  type="button" class="custom1" >כתיבה</button>
-                <button  type="button" class="custom1" >שפת אם</button>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" checked value="rusion">
-                <label class="custom-control-label purple" for="lang3">רוסית</label>
-                <button  type="button" class="custom1" >קריאה</button>
-                <button  type="button" class="custom1" >כתיבה</button>
-                <button  type="button" class="custom1" >שפת אם</button>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" checked value="spanish">
-                <label class="custom-control-label purple" for="lang4">ספרדית</label>
-                <button  type="button" class="custom1" >קריאה</button>
-                <button  type="button" class="custom1" >כתיבה</button>
-                <button  type="button" class="custom1" >שפת אם</button>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" checked value="arabic">
-                <label class="custom-control-label purple" for="lang5">ערבית</label>
-                <button  type="button" class="custom1" >קריאה</button>
-                <button  type="button" class="custom1" >כתיבה</button>
-                <button  type="button" class="custom1" >שפת אם</button>
-            </div>
-            <!-- {{lang2.checked}}
-            <label *ngIf="lang2.checked==true"> aaa</label> -->
+            <div *ngFor="let lang of languages" class="custom-control custom-checkbox">
 
+                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" checked value="no">
+
+                <label class="custom-control-label purple" for="lang1">{{lang.name}}</label>
+
+                <button  type="button" class="custom1" >קריאה</button>
+                <button  type="button" class="custom1" >כתיבה</button>
+                <button  type="button" class="custom1" >שפת אם</button>
+
+            </div>
+            
         </div>
     </div>
    
     <div class="button-wapper">
-        <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "add()"> רישום</button>
+        <button type="button" class="btn btn-dark btn-perple btn-lg" (click) = "addValunteer()"> רישום</button>
     </div>
     
 </div>
 
-<div class="section">
-    <h2 class="title"> שירות צבאי</h2>
+ <div class="section">
+    <h2 class="title"> מידע נוסף למתנדב </h2>
     <div class="row prograph">
+        <h5> רכב/רישיון נהיגה</h5>
         <div class="col">
 
-            <h6 class="inline-title"> שומר שבת:</h6>
+            <h6 class="inline-title"> רשיון נהיגה :</h6>
 
             <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="shabat1" name="shabat" class="custom-control-input" value="yes">
-                <label class="custom-control-label purple" for="shabat1">כן</label>
+                <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="license1">כן</label>
             </div>
             <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="shabat2" name="shabat" class="custom-control-input" value="no">
-                <label class="custom-control-label purple" for="shabat2">לא</label>
+                <input type="radio" id="license2" name="license" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="license2">לא</label>
             </div>
-        
+            <div class="col-6">
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>סוג רשיון</option>
+                <option value="1">ר.ב</option>
+                <option value="2">ר.ג</option>
+                <option value="3">אופנוע</option>
+                <option value="4">משאית</option>
+                <option value="5">אוטובוס</option>
+            </select>
+        </div>
+        <div >
+            <h6 class="inline-title"> וו גרירה  :</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="hook1" name="hook" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="hook1">כן</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="hook2" name="hook" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="hook2">לא</label>
+            </div>
+        </div>
+        <div >
+            <h6 class="inline-title"> נגרר  :</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="dragged1" name="dragged" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="dragged1">כן</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="dragged2" name="dragged" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="dragged2">לא</label>
+            </div>
+        </div>
+        <div >
+            <h6 class="inline-title"> בעל רכב   :</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="car1" name="car" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="car1">כן</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="car2" name="car" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="car2">לא</label>
+            </div>
+            <div class="col-6">
+            <select class="form-select form-control" aria-label="Default select example">
+                <option selected>סוג רכב</option>
+                <option value="3">אופנוע</option>
+                <option value="4">פרטי</option>
+                <option value="3">מיני וואן</option>
+                <option value="5">4*4</option>
+            </select>
+        </div>
+        </div>
+        <div >
+            <h6 class="inline-title"> גליון נהיגה    :</h6>
+
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="sheet1" name="sheet" class="custom-control-input" value="yes">
+                <label class="custom-control-label purple" for="sheet1">נקי</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="sheet2" name="sheet" class="custom-control-input" value="no">
+                <label class="custom-control-label purple" for="sheet2">לא</label>
+            </div>
+       
+        </div>
+        <div class="col-6">
+        <input class="form-control" placeholder="מהות העבירה "/>
+        <input type="date" class="form-control" placeholder="תאריך קבלת דוח אחרון"/>
+    </div>
+        </div>
+        <div class="col-6">
+        <h5>שירות</h5>
+
+        <div  class="col-6 second-col">
+            
+
         </div>
     </div>
-</div>
+    </div>
+</div> 
 
 <div class="section">
-    
+    <h2 class="title"> זמינות</h2>
 </div>
